code refactoring + updates event list/details design

--- a/app/src/main/res/layout/list_item_next_event_card.xml
+++ b/app/src/main/res/layout/list_item_next_event_card.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="240dp"
     android:clickable="true"
+    android:fadingEdge="none"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground">
 
@@ -22,22 +23,22 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:contentDescription="Background image"
                 android:cropToPadding="true"
                 android:scaleType="centerCrop"
-                android:tint="#4AFFFFFF"
                 android:tintMode="src_atop"
-                map:srcCompat="@drawable/background_landscape" />
+                map:srcCompat="@drawable/background_landscape"
+                map:tint="#4AFFFFFF" />
 
             <LinearLayout
                 android:id="@+id/align"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="15dp">
+                android:padding="15dp" >
 
                 <TextView
                     android:id="@+id/tv_company_name"
@@ -46,7 +47,8 @@
                     android:layout_gravity="start"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
-                    android:textSize="28sp"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
                     tools:hint="SEB" />
 
                 <TextView
@@ -54,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|left"
-                    android:textAllCaps="true"
+                    android:textAllCaps="false"
                     android:textColor="#222222"
                     android:textColorHint="#222222"
                     android:textSize="18sp"
@@ -67,12 +69,12 @@
                 <TextView
                     android:id="@+id/tv_time"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_baseline_access_time_24px"
                     android:drawablePadding="10dp"
                     android:drawableTint="#222222"
                     android:gravity="center_vertical"
-                    android:text="17:00"
+                    android:text="@string/event_time_placeholder"
                     android:textColor="#222222"
                     android:textSize="16sp" />
 
@@ -87,7 +89,7 @@
                     android:drawableLeft="@drawable/ic_baseline_location_on_24"
                     android:drawablePadding="10dp"
                     android:drawableTint="#222222"
-                    android:text="Digital"
+                    android:text="@string/no_location_available"
                     android:textColor="#222222"
                     android:textSize="16sp" />
 
