--- a/app/src/main/res/layout/list_item_event_card.xml
+++ b/app/src/main/res/layout/list_item_event_card.xml
@@ -37,7 +37,7 @@
                 tools:text="Feb" />
 
             <TextView
-                android:id="@+id/tv_day"
+                android:id="@+id/tv_event_det_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
