--- a/app/src/main/res/layout/studs_widget.xml
+++ b/app/src/main/res/layout/studs_widget.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/widget_countdown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
@@ -27,9 +27,9 @@
             android:paddingTop="4sp"
             android:paddingEnd="10sp"
             android:paddingBottom="4sp"
-            android:text="@string/next_event"
+            android:text="@string/widget_countdown"
             android:textColor="#EDEDED"
-            android:textSize="14sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -56,7 +56,7 @@
                 android:layout_marginStart="10sp"
                 android:layout_marginTop="5sp"
                 android:layout_marginEnd="10sp"
-                android:hint="Tuesday 12 Feb"
+                android:hint="Tuesday 12 Feb, 17:00"
                 android:textSize="12sp" />
         </LinearLayout>
 
