--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="ThemeOverlay.Kotten.AppWidgetContainer" parent="">
-        <item name="appWidgetBackgroundColor">@color/light_blue_600</item>
-        <item name="appWidgetTextColor">@color/light_blue_50</item>
+        <item name="appWidgetBackgroundColor">@color/colorBackground</item>
+        <item name="appWidgetTextColor">@color/colorPrimary</item>
     </style>
 </resources>
