--- a/app/src/main/res/layout/studs_widget.xml
+++ b/app/src/main/res/layout/studs_widget.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="Background image"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/bg_clouds_blur" />
+        app:srcCompat="@drawable/background_landscape" />
 
     <LinearLayout
         android:layout_width="match_parent"
