--- a/app/src/main/res/layout/studs_widget.xml
+++ b/app/src/main/res/layout/studs_widget.xml
@@ -2,62 +2,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/widget_margin"
     android:theme="@style/ThemeOverlay.Kotten.AppWidgetContainer">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/widgetBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Background image"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/background_landscape" />
+        android:src="@drawable/background_widget" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/widget_countdown"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
-            android:paddingStart="10sp"
-            android:paddingTop="4sp"
-            android:paddingEnd="10sp"
-            android:paddingBottom="4sp"
-            android:text="@string/widget_countdown"
-            android:textColor="#EDEDED"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal"
+            android:paddingStart="8sp"
+            android:paddingEnd="8sp">
+
+            <TextView
+                android:id="@+id/widget_countdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="4sp"
+                android:paddingBottom="4sp"
+                android:textColor="#EDEDED"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                tools:text="In 2 days" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal|end"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/widgetLogo"
+                    android:layout_width="25sp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:src="@drawable/logo_widget" />
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="2sp"
+            android:paddingBottom="5sp">
 
             <TextView
                 android:id="@+id/widget_company"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10sp"
-                android:contentDescription="@string/appwidget_text"
-                android:hint="Company"
+                android:layout_marginStart="8sp"
+                android:layout_marginEnd="10sp"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textSize="19sp"
+                android:textStyle="bold"
+                tools:text="Company" />
 
             <TextView
                 android:id="@+id/widget_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10sp"
-                android:layout_marginTop="5sp"
+                android:layout_marginStart="8sp"
+                android:layout_marginTop="2sp"
                 android:layout_marginEnd="10sp"
-                android:hint="Tuesday 12 Feb, 17:00"
-                android:textSize="12sp" />
+                android:ellipsize="end"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="12sp"
+                tools:text="Tuesday 12 Feb, 17:00" />
         </LinearLayout>
 
     </LinearLayout>
