--- a/app/src/main/res/xml/studs_widget_info.xml
+++ b/app/src/main/res/xml/studs_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/studs_widget"
     android:minWidth="110dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="10000"
+    android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
