--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -6,14 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/sv_container"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingTop="160dp"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="-16dp">
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/background_landscape" />
 
         <LinearLayout
             android:id="@+id/ll_meta_data"
@@ -21,93 +24,136 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.card.MaterialCardView
-                style="@style/Widget.MaterialComponents.CardView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/default_margin_small">
+                android:orientation="vertical"
+                android:padding="@dimen/default_margin">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/default_margin">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_event_det_time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="22sp"
-                            android:textStyle="bold"
-                            tools:text="@string/event_time_placeholder" />
-
-                        <TextView
-                            android:id="@+id/tv_company_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10sp"
-                            android:gravity="center_vertical"
-                            android:textColor="?android:attr/textColorPrimary"
-                            android:textSize="28sp"
-                            tools:hint="Spotify" />
-                    </LinearLayout>
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_event_det_date"
-                        android:layout_width="match_parent"
+                        android:id="@+id/tv_event_det_time"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/default_margin"
-                        android:layout_marginBottom="@dimen/default_margin_mini"
-                        android:alpha="0.7"
-                        android:drawablePadding="@dimen/default_margin_mini"
-                        android:gravity="center_vertical"
-                        android:textAllCaps="false"
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textSize="16sp"
-                        app:drawableStartCompat="@drawable/ic_time_icon"
-                        tools:hint="tuesday 2 februari, 17:00" />
+                        android:layout_gravity="center"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
+                        tools:text="@string/event_time_placeholder" />
 
                     <TextView
-                        android:id="@+id/tv_company_location"
+                        android:id="@+id/tv_company_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/default_margin_mini"
-                        android:alpha="0.7"
-                        android:clickable="true"
-                        android:drawablePadding="@dimen/default_margin_small"
-                        android:focusable="true"
+                        android:layout_marginStart="10sp"
                         android:gravity="center_vertical"
                         android:textColor="?android:attr/textColorPrimary"
-                        android:textSize="16sp"
-                        app:drawableStartCompat="@drawable/ic_location_icon"
-                        tools:hint="Cool Street 123" />
+                        android:textSize="28sp"
+                        tools:hint="Spotify" />
                 </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.card.MaterialCardView
-                style="@style/Widget.MaterialComponents.CardView"
+                <TextView
+                    android:id="@+id/tv_event_det_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:layout_marginBottom="@dimen/default_margin_mini"
+                    android:alpha="0.7"
+                    android:drawablePadding="@dimen/default_margin_mini"
+                    android:gravity="center_vertical"
+                    android:textAllCaps="false"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="16sp"
+                    app:drawableStartCompat="@drawable/ic_time_icon"
+                    tools:hint="tuesday 2 februari, 17:00" />
+
+                <TextView
+                    android:id="@+id/tv_company_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/default_margin_mini"
+                    android:alpha="0.7"
+                    android:clickable="true"
+                    android:drawablePadding="@dimen/default_margin_small"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="16sp"
+                    app:drawableStartCompat="@drawable/ic_location_icon"
+                    tools:hint="Cool Street 123" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin_small">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_private_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginBottom="@dimen/default_margin"
                     android:padding="@dimen/default_margin_small"
                     android:textIsSelectable="true"
                     android:textSize="16sp" />
-            </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:text="@string/forms"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_pre_event"
+                        android:layout_width="165dp"
+                        android:layout_height="55dp"
+                        android:layout_margin="@dimen/default_margin"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/colorAccent"
+                        android:text="@string/pre_form"
+                        android:textColor="@android:color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                    <Button
+                        android:id="@+id/btn_post_event"
+                        android:layout_width="165dp"
+                        android:layout_height="55dp"
+                        android:layout_margin="@dimen/default_margin"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/colorAccent"
+                        android:text="@string/post_form"
+                        android:textColor="@android:color/white"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
+    </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
