--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Margins -->
-    <dimen name="default_margin_tiny">2dp</dimen>
     <dimen name="default_margin_mini">4dp</dimen>
     <dimen name="default_margin_small">8dp</dimen>
     <dimen name="default_margin_medium">12dp</dimen>
@@ -13,8 +12,13 @@
 
     <!-- Buttons -->
     <dimen name="button_height">58dp</dimen>
-    <dimen name="toolbar_elevation">8dp</dimen>
 
     <dimen name="event_height">72dp</dimen>
     <dimen name="event_date_width">64dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">0dp</dimen>
 </resources>
