--- a/app/src/main/res/layout/fragment_happenings.xml
+++ b/app/src/main/res/layout/fragment_happenings.xml
@@ -8,6 +8,20 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/happenings_swipe_refresh"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        tools:context=".events.views.EventsFragment">
+
+        <ProgressBar
+            android:id="@+id/happenings_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -55,20 +69,6 @@
 
             </com.google.android.material.tabs.TabLayout>
 
-            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/happenings_swipe_refresh"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                tools:context=".events.views.EventsFragment">
-
-                <ProgressBar
-                    android:id="@+id/happenings_progress_bar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/happenings_view_pager"
                 android:layout_width="match_parent"
@@ -94,14 +94,14 @@
                 tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ullamcorper laoreet porttitor. Suspendisse tempus, felis at sagittis mollis, justo ligula aliquet arcu, vel dictum quam mauris nec risus. " />
 
             <Button
-                android:id="@+id/btn_add_happening"
+                android:id="@+id/btn_create_happening"
                 android:layout_width="wrap_content"
                 android:layout_height="55dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="@dimen/default_margin"
                 android:layout_weight="1"
                 android:backgroundTint="@color/colorAccent"
-                android:text="@string/happenings_add"
+                android:text="@string/happenings_create"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
