--- a/app/src/main/res/layout/activity_create_happening.xml
+++ b/app/src/main/res/layout/activity_create_happening.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".happenings.adapters.CreateHappeningActivity">
+    tools:context=".happenings.CreateHappeningActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tv_create_title"
             style="@style/Base.TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +30,7 @@
         <RadioGroup
             android:id="@+id/create_rb"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_medium"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
@@ -74,10 +75,72 @@
                 android:textSize="52sp" />
 
         </RadioGroup>
+
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_margin_large"
+            android:layout_marginTop="@dimen/default_margin_huge"
+            android:text="@string/happenings_location"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/autocomplete_fragment"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tv_create_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_large"
+            android:layout_marginTop="@dimen/default_margin_huge"
+            android:text="@string/happenings_description"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/create_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/default_margin_large"
+                android:layout_marginTop="@dimen/default_margin_small" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/tv_create_participants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_large"
+            android:layout_marginTop="@dimen/default_margin_huge"
+            android:text="@string/happenings_description"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp" />
+
+        <MultiAutoCompleteTextView
+            android:id="@+id/autoCompleteParticipants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_large"
+            android:layout_marginTop="@dimen/default_margin_small"
+            android:text="MultiAutoCompleteTextView" />
+
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_create_happening2"
+        android:id="@+id/btn_add_happening"
         android:layout_width="wrap_content"
         android:layout_height="55dp"
         android:layout_gravity="center_horizontal"
