--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -97,6 +97,13 @@
             tools:layout_editor_absoluteX="98dp"
             tools:layout_editor_absoluteY="530dp" />
 
+        <Button
+            android:id="@+id/btn_create_happening"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin_huge"
+            android:text="Create happening" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
