--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#bf5c06</color>
+    <color name="colorPrimaryLight">#D38644</color>
     <color name="colorPrimaryDark">#a63208</color>
     <color name="colorAccent">#8c708a</color>
     <color name="colorBackground">#121212</color>
