--- a/app/src/main/res/layout/activity_create_happening.xml
+++ b/app/src/main/res/layout/activity_create_happening.xml
@@ -125,7 +125,8 @@
                 android:layout_marginTop="@dimen/default_margin_huge"
                 android:text="@string/happenings_location"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -135,7 +136,8 @@
                     android:id="@+id/autocomplete_fragment"
                     android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/lightGrey" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -146,7 +148,8 @@
                 android:layout_marginTop="@dimen/default_margin_huge"
                 android:text="@string/happenings_description"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/create_desc"
@@ -157,7 +160,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/default_margin_large"
-                    android:layout_marginTop="@dimen/default_margin_small" />
+                    android:layout_marginTop="@dimen/default_margin_small"
+                    android:backgroundTint="@color/lightGrey" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -166,16 +170,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/default_margin_large"
                 android:layout_marginTop="@dimen/default_margin_huge"
-                android:text="@string/happenings_participants"
+                android:text="@string/happenings_buddies"
                 android:textColor="?android:attr/textColorPrimary"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/create_participant_chips"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/default_margin_large"
-                android:layout_marginVertical="@dimen/default_margin_huge"
+                android:layout_marginTop="@dimen/default_margin_small"
+                android:layout_marginBottom="@dimen/default_margin_huge"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
