--- a/app/src/main/res/layout/fragment_happenings.xml
+++ b/app/src/main/res/layout/fragment_happenings.xml
@@ -52,9 +52,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabGravity="fill"
-                app:tabIndicatorColor="@color/colorAccent"
+                app:tabIndicatorColor="@color/colorPrimary"
                 app:tabIndicatorGravity="bottom"
-                app:tabSelectedTextColor="@color/colorAccent"
+                app:tabSelectedTextColor="@color/colorPrimary"
                 app:tabTextColor="@android:color/tab_indicator_text">
 
                 <com.google.android.material.tabs.TabItem
