--- a/app/src/main/res/layout/fragment_happening.xml
+++ b/app/src/main/res/layout/fragment_happening.xml
@@ -9,7 +9,9 @@
     android:layout_marginTop="@dimen/default_margin_mini"
     android:layout_marginEnd="@dimen/default_margin_small"
     android:layout_marginBottom="@dimen/default_margin_mini"
+    android:clickable="false"
     android:foreground="?attr/selectableItemBackground"
+    android:longClickable="false"
     android:orientation="horizontal"
     android:stateListAnimator="@animator/alpha">
 
@@ -54,14 +56,33 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/happening_title"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="?android:attr/textColorPrimary"
-                android:textSize="16sp"
-                android:textStyle="normal"
-                tools:text="Studs sitter med 3 andra!" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/happening_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="100"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="normal"
+                    tools:text="Studs sitter med 3 andra!" />
+
+                <TextView
+                    android:id="@+id/happening_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="X"
+                    android:textAlignment="textEnd"
+                    android:textColor="?android:attr/textColorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:visibility="invisible" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/happening_place"
@@ -85,6 +106,7 @@
                 android:id="@+id/happening_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin_mini"
                 android:gravity="end"
                 android:textColor="@color/colorAccent"
                 android:textSize="12sp"
