fixes lifecycle bug + removes list item on delete

--- a/app/src/main/res/layout/fragment_happening.xml
+++ b/app/src/main/res/layout/fragment_happening.xml
@@ -16,6 +16,7 @@
     android:stateListAnimator="@animator/alpha">
 
     <LinearLayout
+        android:id="@+id/happening_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
