--- a/app/src/main/res/layout/fragment_happenings.xml
+++ b/app/src/main/res/layout/fragment_happenings.xml
@@ -58,6 +58,7 @@
                 app:tabTextColor="@android:color/tab_indicator_text">
 
                 <com.google.android.material.tabs.TabItem
+                    android:id="@+id/map_tab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/map_tab" />
